fix: put link to armenian coffee store in margin

--- a/dermardiros/armeniancoffee.tex
+++ b/dermardiros/armeniancoffee.tex
@@ -24,4 +24,6 @@ Family member: Dan
     \item Once froth rises, remove from heat and serve.
 \end{enumerate}
 
-Dan buys his coffee from Henry's House of Coffee based in California\footnote{https://henryshouseofcoffee.com/collections/soorj}. When he buys from Adonis, he asks them to grind some cardamom at the same time with the coffee.
+Dan buys his coffee from Henry's House of Coffee based in California$^1$. When he buys from Adonis, he asks them to grind some cardamom at the same time with the coffee.
+
+\marginnote{\small $^1$Available: \url{https://henryshouseofcoffee.com/collections/soorj}}
